Fix: Bootstrap 4 styling integration. Fixed position buttons didn't have right z-index
Sync to source repo @7455191b024e543cdd2e65ddecd4d8f1949c1e33

--- a/css/buttons.bootstrap4.css
+++ b/css/buttons.bootstrap4.css
@@ -64,6 +64,7 @@ div.dt-button-collection-title:empty {
 
 div.dt-button-collection {
   position: absolute;
+  z-index: 2001;
 }
 div.dt-button-collection div.dropdown-menu {
   display: block;
@@ -72,6 +73,7 @@ div.dt-button-collection div.dropdown-menu {
 }
 div.dt-button-collection div.dt-button-collection-title {
   background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.15);
 }
 div.dt-button-collection.fixed {
   position: fixed;
@@ -81,7 +83,7 @@ div.dt-button-collection.fixed {
   border-radius: 0;
 }
 div.dt-button-collection.fixed.two-column {
-  margin-left: -150px;
+  margin-left: -200px;
 }
 div.dt-button-collection.fixed.three-column {
   margin-left: -225px;
@@ -102,7 +104,7 @@ div.dt-button-collection > :last-child > * {
   break-inside: avoid;
 }
 div.dt-button-collection.two-column {
-  width: 300px;
+  width: 400px;
 }
 div.dt-button-collection.two-column > :last-child {
   padding-bottom: 1px;
